[package]
name = "packet_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.34"
pnet_packet = "0.34"
tokio = { version = "1", features = ["full"] }
prometheus = "0.13"
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
chrono = "0.4"
ipnetwork = "0.20"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
